CHANGES IN VERSION 1.2.6
------------------------

USER-LEVEL CHANGES

	o simplify get_anno_genes (only GO-IDs as input,
	  go_enrich()-result is no longer supported as input)
	  
	  
CHANGES IN VERSION 1.2.5
------------------------

NEW FEATURES

	o new function get_anno_categories returns 
	  associated GO-categories given genes
	o added man-pages for all R-functions
	  e.g. '?go_enrich'


CHANGES IN VERSION 1.2.4
------------------------

NEW FEATURES

	o new 'silent' option represses all output to the screen
	  except for warnings and error messages

IMPROVEMENTS
	  
	o modified generation of temporary files allows 
	  parallel processing with mclapply
	  
USER-LEVEL CHANGES

	o convert all output-columns that were factors to characters
	o sort 'go_enrich' output also on ontology and GO-ID
	  (after sorting on FWER and p-value)
	o sort genes in 'get_anno_genes' output (mixedsort)


CHANGES IN VERSION 1.2.3
------------------------

NEW FEATURES

	o mouse gene annotations and gene_coordinates
	o hg20 gene annotations and gene_coordinates
	o new function: 'plot_odds_ratio'

USER-LEVEL CHANGES

	o update ontology (last modified: 25.04.2017)
	o genes in go_enrich(...)[[2]] are sorted alphabetically
	  (mixedsort)
	o when genomic regions are provided as input, candidate
	  regions are implicitly also part of background
	  (like it is for single-genes-input)
	o output of go_enrich has a new element:
	  go_enrich()[[3]] = reference genome  


CHANGES IN VERSION 1.2.2
------------------------

NEW FEATURES

	o new functions: 'get_child_nodes' and 'get_parent_nodes'

USER-LEVEL CHANGES

	o change name of function 'get_GO_names' to 'get_names'	


CHANGES IN VERSION 1.2.1
------------------------

NEW FEATURES

	o additional output:
	  expected and real no. of annotated candidate
	  genes per GO (hypergeometric test) and
	  expected and real sum of ranks of annotated
	  genes (wilcoxon rank-sum test)


CHANGES IN VERSION 1.2.0
------------------------

NEW FEATURES
