@@ -17,17 +17,20 @@ get_parent_nodes = function(go_ids){
 	parent = term[match(go_parent_id[,2],term[,1]) ,4]
 	# GO-IDs of child nodes (and the node itself)
 	children = term[match(go_parent_id[,3],term[,1]) ,4]
-	out = data.frame(children, parent, go_parent_id[,5])
-	colnames(out) = c("child_go_id","parent_go_id","distance")
-	out[,1:2] = apply(out[,1:2], 2, as.character)
+	# NEW: add name to parent
+	names = get_names(parent)[,"go_name"]
+	out = data.frame(children, parent, names, go_parent_id[,5])
+	colnames(out) = c("child_go_id","parent_go_id","parent_name","distance")
+	out[,1:2] = apply(out[,1:3], 2, as.character)
 	# sort
-	out = out[order(out[,1],out[,3],out[,2]),]
+	out = out[order(out[,1],out[,4],out[,2],out[,3]),]
 	# remove 'all'-root node
 	out = out[out[,2] != "all",]
+	# NEW: remove duplicates (ordered by distance, so shortest dist is kept)
+	out = out[!(duplicated(paste(out[,1],out[,2]))),]
 	
 	rownames(out) = 1:nrow(out)
 	
 	return(out)
 }
 
-# TODO: add example with adding name via get_names
