@@ -56,11 +56,12 @@ Rscript test_values.R
 (*) ref-genome default in get_anno_genes
 (*) only go-ids as input for get_anno_genes (remove res default option)
 (*) change col-name in get_names to "go_name"
-() GO-domains as optional input for get_anno_categroies (full names)
 () GO-domains as optional input parameter for go_enrich
 
-() data.table in go_enrich for 'get annotated GOs'
 () add GO-names to get_parent, get_child, [get_anno_genes - eher nicht, vllt. ein beispiel mit get_names in man-page, es reicht schon wenn sich die ID immer wiederholt]
+() get_parent, get_child -> reduce to shortest distance, say that in man-page
+
+() data.table in go_enrich for 'get annotated GOs' and maybe in get_anno_genes in 'find child nodes'
 () add in man-page get_categories an example that uses get_parent_nodes
 () sort go_enrich res by n-candidate expected (tail is unordered)
 () update testing scripts with modified go-sort and helper functions
@@ -86,6 +87,7 @@ Rscript test_values.R
 
 () in get children and get parents multiple entries for the same parent/child with differing distances are possible - is that still the case? if so, delete duplicates and keep only shortest distance
 
+() in plot_odds_ratio.Rd say excactly how odds ratio is computed
 () also return total number of annotated genes
 () maybe use one generic plotting function instead of plot_odds / plot_scores...
 () wilcoxon for genomic regions? - try out if easy to implement
